DEVEX-563 added commands for Content Transport
FS-CLI | Kommandos für ContentTransport

* added code style to project
* updated license headers
* added commands for Content Transport
** feature list: lists all features for the specified project
** feature download: downloads the specified feature
** feature analyze: analyzes the specified feature in the project and logs the result
** feature install: analyzes & installs the specified feature in the project